--- a/8-Puzzle/8-Puzzle.csproj
+++ b/8-Puzzle/8-Puzzle.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Heuristic.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tree.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
