--- a/8-Puzzle/8-Puzzle.csproj
+++ b/8-Puzzle/8-Puzzle.csproj
@@ -48,8 +48,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="C5\Handle.cs" />
     <Compile Include="Heuristic.cs" />
     <Compile Include="Node.cs" />
+    <Compile Include="NodeQueue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tree.cs" />
