everything is working, interfaces, extra methods

--- a/8-Puzzle/8-Puzzle.csproj
+++ b/8-Puzzle/8-Puzzle.csproj
@@ -48,7 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
-    <Compile Include="C5\Handle.cs" />
     <Compile Include="Heuristic.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
@@ -57,6 +56,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="C5\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
